--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8Rf8s_2bkwmyGKZp6773yx-Qv7J0x_0E&libraries=places"></script>
     <div id="root"></div>
   </body>
 </html>
